gitea/ssh-service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: gitea-ssh
  labels:
    app: gitea
spec:
  type: NodePort
  selector:    
    app: gitea
  ports:  
  - name: ssh
    port: 22
    targetPort: 22
    nodePort: 30022
    protocol: TCP
