gitea/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea
spec:
  tls:
  - hosts:
    - code.nfsmith.ca
    secretName: tls-certs
  rules:
  - host: code.nfsmith.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: gitea-http
          servicePort: 3000
